--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             tooltip
               .style("opacity", 0.8)
               .html(
-                `<i><b>Gene Expression</i></b><br></br><b>CST3:</b> ${d.CST3} <br></br>NKG7: ${d.NKG7}<br></br>PPBP: ${d.PPBP}`
+                `<i><b>Gene Expression</i></b><br></br><b>CST3:</b> ${d.CST3} <br></br><b>NKG7:</b> ${d.NKG7}<br></br><b>PPBP:</b> ${d.PPBP}`
               )
               .style("left", d3.mouse(this)[0] + 30 + "px")
               .style("top", d3.mouse(this)[1] + 30 + "px");
